# embr-foundry

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  embr.yaml  pyproject.toml
app/: ai.py  main.py
app/backends/: __init__.py  agent.py  base.py  completions.py  embeddings.py
app/static/: index.html
