[project]
name = "embr-foundry"
version = "0.1.0"
description = "Minimal chat app to test PaaS env var injection, with a pluggable AI backend."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "azure-ai-inference>=1.0.0b9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
