[project]
name = "embr-foundry"
version = "0.1.0"
description = "Minimal chat + embeddings demo to test PaaS env var injection."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<0.116",
    "uvicorn>=0.30,<0.35",
    "openai>=1.50",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
# Use the OS/native certificate store instead of uv's bundled cert roots.
# Required in build environments behind a TLS-intercepting proxy (e.g. Oryx/PaaS),
# where the proxy CA is trusted by the system store but not by uv's webpki roots,
# which otherwise causes `invalid peer certificate: UnknownIssuer` on pythonhosted.
native-tls = true

